Initialized the contactors and added psudeocode for the checking if closed logic.

--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -98,34 +98,40 @@ Mcu.Pin11=PA5
 Mcu.Pin12=PA6
 Mcu.Pin13=PA7
 Mcu.Pin14=PB0
-Mcu.Pin15=PA15
-Mcu.Pin16=PC10
-Mcu.Pin17=PC11
-Mcu.Pin18=PC12
-Mcu.Pin19=PD0
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PD10
+Mcu.Pin18=PD11
+Mcu.Pin19=PD12
 Mcu.Pin2=PC0
-Mcu.Pin20=PD1
-Mcu.Pin21=PD2
-Mcu.Pin22=PD3
-Mcu.Pin23=PD4
-Mcu.Pin24=PD5
-Mcu.Pin25=PD6
-Mcu.Pin26=PD7
-Mcu.Pin27=PB3
-Mcu.Pin28=PB4
-Mcu.Pin29=PB5
+Mcu.Pin20=PD13
+Mcu.Pin21=PD14
+Mcu.Pin22=PD15
+Mcu.Pin23=PC6
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PD1
+Mcu.Pin27=PD2
+Mcu.Pin28=PD3
+Mcu.Pin29=PD4
 Mcu.Pin3=PC1
-Mcu.Pin30=PB6
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin33=VP_SYS_VS_tim6
+Mcu.Pin30=PD5
+Mcu.Pin31=PD6
+Mcu.Pin32=PD7
+Mcu.Pin33=PB3
+Mcu.Pin34=PB4
+Mcu.Pin35=PB5
+Mcu.Pin36=PB6
+Mcu.Pin37=PB7
+Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_SYS_VS_tim6
 Mcu.Pin4=PC2
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=34
+Mcu.PinsNb=40
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -155,10 +161,6 @@ PA0-WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LV Charge
 PA1.Signal=ADCx_IN1
-PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=nDCDC1_fault
-PA15.Locked=true
-PA15.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=HV Current
 PA2.Signal=ADCx_IN2
@@ -206,56 +208,84 @@ PC0.Signal=ADCx_IN10
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=Array Current Sensor 2
 PC1.Signal=ADCx_IN11
-PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=nDCDC1_ON
-PC10.Locked=true
-PC10.Signal=GPIO_Input
-PC11.GPIOParameters=GPIO_Label
-PC11.GPIO_Label=ncharge_fault
-PC11.Locked=true
-PC11.Signal=GPIO_Input
-PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=ncharge_ON
-PC12.Locked=true
-PC12.Signal=GPIO_Input
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=Array Current Sensor 3
 PC2.Signal=ADCx_IN12
 PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=Array Current Sensor 4
 PC3.Signal=ADCx_IN13
-PD0.GPIOParameters=GPIO_Label
-PD0.GPIO_Label=nCurrent_Sense
-PD0.Locked=true
-PD0.Signal=GPIO_Input
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=ncharge_fault
+PC6.Locked=true
+PC6.Signal=GPIO_Input
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=nDCDC1_ON
+PC7.Locked=true
+PC7.Signal=GPIO_Input
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=nDCDC1_fault
+PC8.Locked=true
+PC8.Signal=GPIO_Input
 PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=nCharger 12V Line Enable
+PD1.GPIO_Label=Contactor LEDs Precharger
 PD1.Locked=true
 PD1.Signal=GPIO_Input
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=DCDC0 UV Fault
+PD10.Locked=true
+PD10.Signal=GPIO_Input
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=DCDC0 OV Fault
+PD11.Locked=true
+PD11.Signal=GPIO_Input
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=nDCDC1 Enable
+PD12.Locked=true
+PD12.Signal=GPIO_Input
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=nCharger 12V Line Enable
+PD13.Locked=true
+PD13.Signal=GPIO_Input
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=nCurrent_Sense
+PD14.Locked=true
+PD14.Signal=GPIO_Input
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=ncharge_ON
+PD15.Locked=true
+PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
-PD2.GPIO_Label=nDCDC1 Enable
+PD2.GPIO_Label=Array Contactor Precharger
 PD2.Locked=true
 PD2.Signal=GPIO_Input
 PD3.GPIOParameters=GPIO_Label
-PD3.GPIO_Label=DCDC0 OV Fault
+PD3.GPIO_Label=Charge Contactor Precharger
 PD3.Locked=true
 PD3.Signal=GPIO_Input
 PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=DCDC0 UV Fault
+PD4.GPIO_Label=Motor Contactor Precharger
 PD4.Locked=true
 PD4.Signal=GPIO_Input
 PD5.GPIOParameters=GPIO_Label
-PD5.GPIO_Label=Debug LEDs
+PD5.GPIO_Label=LV Contactor Precharger
 PD5.Locked=true
 PD5.Signal=GPIO_Input
 PD6.GPIOParameters=GPIO_Label
-PD6.GPIO_Label=Debug LEDs
+PD6.GPIO_Label=Common Contactor Precharger
 PD6.Locked=true
 PD6.Signal=GPIO_Input
 PD7.GPIOParameters=GPIO_Label
 PD7.GPIO_Label=Contactor LEDs
 PD7.Locked=true
 PD7.Signal=GPIO_Input
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=Debug LEDs
+PD8.Locked=true
+PD8.Signal=GPIO_Input
+PD9.GPIOParameters=GPIO_Label
+PD9.GPIO_Label=Debug LEDs
+PD9.Locked=true
+PD9.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
@@ -358,4 +388,5 @@ VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 board=custom
+rtos.0.ip=FREERTOS
 isbadioc=false
