--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -110,28 +110,38 @@ Mcu.Pin22=PD15
 Mcu.Pin23=PC6
 Mcu.Pin24=PC7
 Mcu.Pin25=PC8
-Mcu.Pin26=PD1
-Mcu.Pin27=PD2
-Mcu.Pin28=PD3
-Mcu.Pin29=PD4
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PC1
-Mcu.Pin30=PD5
-Mcu.Pin31=PD6
-Mcu.Pin32=PD7
-Mcu.Pin33=PB3
-Mcu.Pin34=PB4
-Mcu.Pin35=PB5
-Mcu.Pin36=PB6
-Mcu.Pin37=PB7
-Mcu.Pin38=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin39=VP_SYS_VS_tim6
+Mcu.Pin30=PC10
+Mcu.Pin31=PC11
+Mcu.Pin32=PC12
+Mcu.Pin33=PD0
+Mcu.Pin34=PD1
+Mcu.Pin35=PD2
+Mcu.Pin36=PD3
+Mcu.Pin37=PD4
+Mcu.Pin38=PD7
+Mcu.Pin39=PB3
 Mcu.Pin4=PC2
+Mcu.Pin40=PB4
+Mcu.Pin41=PB5
+Mcu.Pin42=PB6
+Mcu.Pin43=PB7
+Mcu.Pin44=PB8
+Mcu.Pin45=PB9
+Mcu.Pin46=PE0
+Mcu.Pin47=PE1
+Mcu.Pin48=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin49=VP_SYS_VS_tim6
 Mcu.Pin5=PC3
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=40
+Mcu.PinsNb=50
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -161,6 +171,18 @@ PA0-WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=LV Charge
 PA1.Signal=ADCx_IN1
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=Contactor LEDs Precharger Sense
+PA10.Locked=true
+PA10.Signal=GPIO_Input
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=Array Contactor Precharger Output
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_Label
+PA12.GPIO_Label=Array Contactor Precharger Sense
+PA12.Locked=true
+PA12.Signal=GPIO_Input
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=HV Current
 PA2.Signal=ADCx_IN2
@@ -179,35 +201,59 @@ PA6.Signal=ADCx_IN6
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=Array Voltage
 PA7.Signal=ADCx_IN7
+PA9.GPIOParameters=GPIO_Label
+PA9.GPIO_Label=Contactor LEDs Precharger Output
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=Common Current Sensor
 PB0.Signal=ADCx_IN8
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=Array Contactor
+PB3.GPIO_Label=Array Contactor Sense
 PB3.Locked=true
 PB3.Signal=GPIO_Input
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=Charge Contactor
+PB4.GPIO_Label=Charge Contactor Output
 PB4.Locked=true
-PB4.Signal=GPIO_Input
+PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=Motor Contactor
+PB5.GPIO_Label=Charge Contactor Sense
 PB5.Locked=true
 PB5.Signal=GPIO_Input
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LV Contactor
+PB6.GPIO_Label=Motor Contactor Output
 PB6.Locked=true
-PB6.Signal=GPIO_Input
+PB6.Signal=GPIO_Output
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=Common Contactor
+PB7.GPIO_Label=Motor Contactor Sense
 PB7.Locked=true
 PB7.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=LV Contactor Output
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=LV Contactor Sense
+PB9.Locked=true
+PB9.Signal=GPIO_Input
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=Array Current Sensor 1
 PC0.Signal=ADCx_IN10
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=Array Current Sensor 2
 PC1.Signal=ADCx_IN11
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=Charge Contactor Precharger Output
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=Charge Contactor Precharger Sense
+PC11.Locked=true
+PC11.Signal=GPIO_Input
+PC12.GPIOParameters=GPIO_Label
+PC12.GPIO_Label=Motor Contactor Precharger Output
+PC12.Locked=true
+PC12.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=Array Current Sensor 3
 PC2.Signal=ADCx_IN12
@@ -226,10 +272,14 @@ PC8.GPIOParameters=GPIO_Label
 PC8.GPIO_Label=nDCDC1_fault
 PC8.Locked=true
 PC8.Signal=GPIO_Input
+PD0.GPIOParameters=GPIO_Label
+PD0.GPIO_Label=Motor Contactor Precharger Sense
+PD0.Locked=true
+PD0.Signal=GPIO_Input
 PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=Contactor LEDs Precharger
+PD1.GPIO_Label=LV Contactor Precharger Output
 PD1.Locked=true
-PD1.Signal=GPIO_Input
+PD1.Signal=GPIO_Output
 PD10.GPIOParameters=GPIO_Label
 PD10.GPIO_Label=DCDC0 UV Fault
 PD10.Locked=true
@@ -255,29 +305,21 @@ PD15.GPIO_Label=ncharge_ON
 PD15.Locked=true
 PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
-PD2.GPIO_Label=Array Contactor Precharger
+PD2.GPIO_Label=LV Contactor Precharger Sense
 PD2.Locked=true
 PD2.Signal=GPIO_Input
 PD3.GPIOParameters=GPIO_Label
-PD3.GPIO_Label=Charge Contactor Precharger
+PD3.GPIO_Label=Common Contactor Precharger Output
 PD3.Locked=true
-PD3.Signal=GPIO_Input
+PD3.Signal=GPIO_Output
 PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=Motor Contactor Precharger
+PD4.GPIO_Label=Common Contactor Precharger Sense
 PD4.Locked=true
 PD4.Signal=GPIO_Input
-PD5.GPIOParameters=GPIO_Label
-PD5.GPIO_Label=LV Contactor Precharger
-PD5.Locked=true
-PD5.Signal=GPIO_Input
-PD6.GPIOParameters=GPIO_Label
-PD6.GPIO_Label=Common Contactor Precharger
-PD6.Locked=true
-PD6.Signal=GPIO_Input
 PD7.GPIOParameters=GPIO_Label
-PD7.GPIO_Label=Contactor LEDs
+PD7.GPIO_Label=Array Contactor Output
 PD7.Locked=true
-PD7.Signal=GPIO_Input
+PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=Debug LEDs
 PD8.Locked=true
@@ -286,6 +328,14 @@ PD9.GPIOParameters=GPIO_Label
 PD9.GPIO_Label=Debug LEDs
 PD9.Locked=true
 PD9.Signal=GPIO_Input
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=Common Contactor Output
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE1.GPIOParameters=GPIO_Label
+PE1.GPIO_Label=Common Contactor Sense
+PE1.Locked=true
+PE1.Signal=GPIO_Input
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
