test blinky light

--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -63,20 +63,24 @@ Mcu.Pin37=PA8
 Mcu.Pin38=PA11
 Mcu.Pin39=PA12
 Mcu.Pin4=PE6
-Mcu.Pin40=PD1
-Mcu.Pin41=PB7
-Mcu.Pin42=PB8
-Mcu.Pin43=PB9
-Mcu.Pin44=PE0
-Mcu.Pin45=PE1
-Mcu.Pin46=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin47=VP_SYS_VS_tim6
+Mcu.Pin40=PA13
+Mcu.Pin41=PA14
+Mcu.Pin42=PA15
+Mcu.Pin43=PD1
+Mcu.Pin44=PB3
+Mcu.Pin45=PB7
+Mcu.Pin46=PB8
+Mcu.Pin47=PB9
+Mcu.Pin48=PE0
+Mcu.Pin49=PE1
 Mcu.Pin5=PC13-ANTI_TAMP
+Mcu.Pin50=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin51=VP_SYS_VS_tim2
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=48
+Mcu.PinsNb=52
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -96,9 +100,9 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM6_DAC_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM6_DAC_IRQn
-NVIC.TimeBaseIP=TIM6
+NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM2_IRQn
+NVIC.TimeBaseIP=TIM2
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=BLU_LED
@@ -112,6 +116,12 @@ PA11.Mode=CAN_Activate
 PA11.Signal=CAN1_RX
 PA12.Mode=CAN_Activate
 PA12.Signal=CAN1_TX
+PA13.Mode=JTAG_4_pins
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=JTAG_4_pins
+PA14.Signal=SYS_JTCK-SWCLK
+PA15.Mode=JTAG_4_pins
+PA15.Signal=SYS_JTDI
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RED_LED
 PA2.Locked=true
@@ -155,6 +165,8 @@ PB14.Mode=CTS_RTS
 PB14.Signal=USART3_RTS
 PB2.Locked=true
 PB2.Signal=GPIO_Output
+PB3.Mode=JTAG_4_pins
+PB3.Signal=SYS_JTDO-SWO
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=_12V_PCHG_EN
 PB7.Locked=true
@@ -340,8 +352,8 @@ USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
-VP_SYS_VS_tim6.Mode=TIM6
-VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_SYS_VS_tim2.Mode=TIM2
+VP_SYS_VS_tim2.Signal=SYS_VS_tim2
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
