switched to nMPS_ESD, and other stuff I may have forgotten sorry

--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -182,7 +182,7 @@ PB9.Signal=GPIO_Input
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Input
 PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=MAIN_PWR_SW
+PC4.GPIO_Label=nMPS_ESD
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC5.GPIOParameters=GPIO_Label
