--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -24,8 +24,9 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
-Mcu.IP6=USART3
-Mcu.IPNb=7
+Mcu.IP6=UART4
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -66,21 +67,23 @@ Mcu.Pin4=PE6
 Mcu.Pin40=PA13
 Mcu.Pin41=PA14
 Mcu.Pin42=PA15
-Mcu.Pin43=PD1
-Mcu.Pin44=PB3
-Mcu.Pin45=PB7
-Mcu.Pin46=PB8
-Mcu.Pin47=PB9
-Mcu.Pin48=PE0
-Mcu.Pin49=PE1
+Mcu.Pin43=PC10
+Mcu.Pin44=PC11
+Mcu.Pin45=PD1
+Mcu.Pin46=PB3
+Mcu.Pin47=PB7
+Mcu.Pin48=PB8
+Mcu.Pin49=PB9
 Mcu.Pin5=PC13-ANTI_TAMP
-Mcu.Pin50=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin51=VP_SYS_VS_tim2
+Mcu.Pin50=PE0
+Mcu.Pin51=PE1
+Mcu.Pin52=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin53=VP_SYS_VS_tim2
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PA0-WKUP
 Mcu.Pin9=PA1
-Mcu.PinsNb=52
+Mcu.PinsNb=54
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -163,6 +166,8 @@ PB13.Signal=USART3_CTS
 PB14.Locked=true
 PB14.Mode=CTS_RTS
 PB14.Signal=USART3_RTS
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=A1
 PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.Mode=JTAG_4_pins
@@ -179,16 +184,22 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=CRITICAL_OV_UV
 PB9.Locked=true
 PB9.Signal=GPIO_Input
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
+PC13-ANTI_TAMP.GPIOParameters=GPIO_Label
+PC13-ANTI_TAMP.GPIO_Label=nDCDC_Fault
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPIO_Input
 PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=nMPS_ESD
+PC4.GPIO_Label=nMPS
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=DCDC1_EN
+PC5.GPIO_Label=ESD
 PC5.Locked=true
-PC5.Signal=GPIO_Output
+PC5.Signal=GPIO_Input
 PC6.GPIOParameters=GPIO_Label
 PC6.GPIO_Label=CHARGE_SAFETY_SENSE
 PC6.Locked=true
@@ -206,12 +217,13 @@ PD1.GPIO_Label=LV_OC
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=DCDC0_OV_FAULT
-PE0.Signal=GPIO_Input
+PE0.GPIO_Label=nCHG_En
+PE0.Locked=true
+PE0.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_Label
-PE1.GPIO_Label=DCDC0_UV_FAULT
+PE1.GPIO_Label=EN1
 PE1.Locked=true
-PE1.Signal=GPIO_Input
+PE1.Signal=GPIO_Output
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=A3
 PE10.Locked=true
@@ -237,15 +249,15 @@ PE15.GPIO_Label=G5
 PE15.Locked=true
 PE15.Signal=GPIO_Output
 PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=nDCDC0_ON
+PE2.GPIO_Label=NC
 PE2.Locked=true
 PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=_3A_OC_UC
+PE3.GPIO_Label=n3A_OC_UC
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=nDCDC1_ON
+PE4.GPIO_Label=nDCDC_ON
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Label
@@ -348,6 +360,8 @@ SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS,CalculateBaudRate,BaudRa
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
