finished updating power selection, updated readGPIO

--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -130,7 +130,7 @@ PA2.GPIO_Label=RED_LED
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=STROBE_EN
+PA3.GPIO_Label=Strobe_En
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.Mode=NSS_Signal_Hard_Output
@@ -147,7 +147,7 @@ PA8.Locked=true
 PA8.PinState=GPIO_PIN_RESET
 PA8.Signal=GPIO_Output
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=ABATT_DISABLE
+PB0.GPIO_Label=ABATT_Disable
 PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
@@ -173,11 +173,11 @@ PB2.Signal=GPIO_Output
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO-SWO
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=_12V_PCHG_EN
+PB7.GPIO_Label=_12V_PCHG_En
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=_12V_CAN_EN
+PB8.GPIO_Label=_12V_CAN_En
 PB8.Locked=true
 PB8.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
@@ -217,7 +217,7 @@ PD1.GPIO_Label=LV_OC
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=nCHG_En
+PE0.GPIO_Label=nCHG_LV_En
 PE0.Locked=true
 PE0.Signal=GPIO_Output
 PE1.GPIOParameters=GPIO_Label
@@ -253,19 +253,19 @@ PE2.GPIO_Label=NC
 PE2.Locked=true
 PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=n3A_OC_UC
+PE3.GPIO_Label=n3A_OC
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=nDCDC_ON
+PE4.GPIO_Label=nDCDC_On
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=nCHG_FAULT
+PE5.GPIO_Label=nCHG_Fault
 PE5.Locked=true
 PE5.Signal=GPIO_Input
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=nCHG_ON
+PE6.GPIO_Label=nCHG_On
 PE6.Locked=true
 PE6.Signal=GPIO_Input
 PE7.GPIOParameters=GPIO_Label
@@ -319,7 +319,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_UART4_Init-UART4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
