--- a/MBMS/MBMS.ioc
+++ b/MBMS/MBMS.ioc
@@ -172,13 +172,15 @@ PB2.Locked=true
 PB2.Signal=GPIO_Output
 PB3.Mode=JTAG_4_pins
 PB3.Signal=SYS_JTDO-SWO
-PB7.GPIOParameters=GPIO_Label
+PB7.GPIOParameters=PinState,GPIO_Label
 PB7.GPIO_Label=_12V_PCHG_En
 PB7.Locked=true
+PB7.PinState=GPIO_PIN_RESET
 PB7.Signal=GPIO_Output
-PB8.GPIOParameters=GPIO_Label
+PB8.GPIOParameters=PinState,GPIO_Label
 PB8.GPIO_Label=_12V_CAN_En
 PB8.Locked=true
+PB8.PinState=GPIO_PIN_RESET
 PB8.Signal=GPIO_Output
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=CRITICAL_OV_UV
@@ -289,7 +291,6 @@ PH1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
-ProjectManager.CompilerLinker=GCC
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
